--- a/src/styleUtils/app-colors.scss
+++ b/src/styleUtils/app-colors.scss
@@ -1,4 +1,2 @@
-$green: #4FB340;
-$orange: #FF9966;
-$pink: #FF5E62;
-$orangeGradian: linear-gradient(to bottom, $orange, $pink);
+$background: #758CF7;
+$counter_background: #8A9DF8;
