--- a/src/components/Counter/style.scss
+++ b/src/components/Counter/style.scss
@@ -1,28 +1,79 @@
+@import "app-colors";
+
+@mixin counterButton {
+  z-index: 10;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 35px;
+  height: 50px;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+}
+
 .container {
-  position: relative;
-  width: 500px;
-  border: 1px solid grey;
-  border-radius: 5px;
+  width: 320px;
+  flex-shrink: 0;
+
+  &:last-child {
+    margin-right: 0;
+  }
 }
 
 .title {
-  font-weight: 400;
+  font-weight: 800;
 }
 
-.button {
-  width: 50px;
-  height: 50px;
-  background-color: yellowgreen;
-  color: white;
-  border-radius: 50%;
+.counter {
+  position: relative;
+  width: 100%;
+  height: 160px;
+  border-radius: 10px;
+  background-color: $counter_background;
+}
+
+.decrementButton {
+  @include counterButton;
+  left: 40px;
+
+  .arrowIcon {
+    transform: rotate(180deg);
+  }
+}
+
+.incrementButton {
+  @include counterButton;
+  right: 40px;
+}
+
+.arrowIcon {
+  width: 25px;
+  height: 40px;
 }
 
 .value {
-
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 100px;
+  margin: auto;
+  line-height: 160px;
+  text-align: center;
+  font-size: 50px;
 }
 
 .resetButton {
-  display: block;
+  z-index: 9;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
   width: 100px;
-  color: grey;
+  height: 30px;
+  margin: auto;
 }
