Text design integration

--- a/src/pages/CounterPage/style.scss
+++ b/src/pages/CounterPage/style.scss
@@ -12,9 +12,10 @@
 }
 
 .title {
+  font-size: 30px;
   font-weight: 800;
   flex: 1;
-  margin-right: 20px;
+  margin: 0 20px 0 0;
 }
 
 .clearAll {
