--- a/src/pages/CounterPage/style.scss
+++ b/src/pages/CounterPage/style.scss
@@ -11,11 +11,15 @@
   align-items: center;
 }
 
+.titleContainer {
+  flex: 1;
+  margin: 0 20px 0 0;
+}
+
 .title {
   font-size: 30px;
   font-weight: 800;
-  flex: 1;
-  margin: 0 20px 0 0;
+  margin: 0;
 }
 
 .clearAll {
