--- a/src/pages/CounterPage/style.scss
+++ b/src/pages/CounterPage/style.scss
@@ -1,7 +1,13 @@
+@import "responsive";
+
 .container {
   display: flex;
   flex-direction: column;
   padding: 0 30px;
+
+  @include max-width(550px) {
+    padding: 0 10px;
+  }
 }
 
 .header {
@@ -9,17 +15,33 @@
   margin-bottom: 20px;
   display: flex;
   align-items: center;
+
+  @include max-width(550px) {
+    height: 100px;
+    margin-bottom: 30px;
+    flex-direction: column;
+    justify-content: center;
+  }
 }
 
 .titleContainer {
   flex: 1;
   margin: 0 20px 0 0;
+
+  @include max-width(550px) {
+    flex: initial;
+    margin-bottom: 15px;
+  }
 }
 
 .title {
   font-size: 30px;
   font-weight: 800;
   margin: 0;
+
+  @include max-width(620px) {
+    font-size: 24px;
+  }
 }
 
 .clearAll {
@@ -42,4 +64,10 @@
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
+
+  @include big-phone {
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 0;
+  }
 }
