--- a/src/components/ArrowButton/style.scss
+++ b/src/components/ArrowButton/style.scss
@@ -1,15 +1,24 @@
+@import "app-colors";
+
 .button {
   z-index: 10;
   position: absolute;
   top: 0;
   bottom: 0;
-  width: 35px;
-  height: 50px;
+  width: 45px;
+  height: 60px;
   margin: auto;
   display: flex;
   justify-content: center;
   align-items: center;
   color: white;
+  border: 1px solid transparent;
+  border-radius: 5px;
+  transition: 500ms;
+
+  &:focus {
+    border-color: $background;
+  }
 }
 
 .icon {
