--- a/src/components/ArrowButton/style.scss
+++ b/src/components/ArrowButton/style.scss
@@ -11,19 +11,8 @@
   color: white;
 }
 
-.iconContainer {
-  position: relative;
-  z-index: 2;
-  display: block;
-  transition: 500ms;
-}
-.iconContainer_fadeOut {
-  z-index: 1;
-  opacity: 0;
-  transform: scale(2.5);
-}
-
 .icon {
+  z-index: 2;
   position: absolute;
   top: 0;
   right: 0;
@@ -44,4 +33,25 @@
 
 .icon_bottom {
   transform: rotate(90deg);
+}
+
+.circle {
+  z-index: 1;
+  position: absolute;
+  top: -20px;
+  left: -28px;
+  width: 100px;
+  height: 100px;
+  margin: auto;
+  border: 20px solid white;
+  border-radius: 50%;
+  box-sizing: border-box;
+  opacity: 1;
+  transform: scale(0);
+  transition: 500ms;
+}
+
+.circle_fadeout {
+  opacity: 0;
+  transform: scale(1);
 }
