--- a/src/Application/style.scss
+++ b/src/Application/style.scss
@@ -1,8 +1,17 @@
 @import "app-colors";
 
 body {
+  margin: 0;
   font-family: 'avenir';
   font-weight: 800;
   background-color: $background;
   color: white;
+}
+
+:global {
+  .noscript-message {
+    margin: 40px 20px;
+    font-size: 20px;
+    text-align: center;
+  }
 }
