--- a/src/styleUtils/mixins.scss
+++ b/src/styleUtils/mixins.scss
@@ -5,6 +5,8 @@
   outline: none;
   font: inherit;
   cursor: pointer;
+  touch-action: manipulation;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
 @mixin resetInput {
